# tiny_recursive_model

./: .gitignore  LICENSE  README.md  config_2060.yaml  config_base.yaml  pyproject.toml
tiny_recursive_model/: ema_callback.py  lit_ema.py  lit_trm.py  losses.py  main.py  metadata.py  sudoku.py
tiny_recursive_model/paper/: initialisers.py  mixer.py  model.py
