[project]
name = "tiny-recursive-model"
version = "0.1.0"
requires-python = ">= 3.11"
authors = [{ name = "Daniel Houghton", email = "dan.houghton@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "argdantic>=1.3.3",
    "einops>=0.8.1",
    "ema-pytorch",
    "huggingface-hub>=1.1.2",
    "lightning>=2.5.6",
    "pydantic>=2.12.3",
    "tensorboard>=2.20.0",
    "torch>=2.4",
    "jsonargparse[signatures]>=4.42",
    "wandb>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tiny_recursive_model"]

# [tool.uv.sources]
# lightning = { git = "https://github.com/Lightning-AI/pytorch-lightning.git", rev = "43c20230bbf835bcae6e376f08f0a08bdd72935b" }
